syntax = "proto3";

package io.github.efenglu.protobuf.examples;

option java_multiple_files = true;

import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";


service MyDataService {
    rpc Update (UpdateMyDataRequest) returns (UpdateMyDataResponse);
    rpc List (ListMyDataRequest) returns (ListMyDataResponse);
}

message MyData {
    int32 intValue = 1;
    string stringValue = 2;
    SubData subData = 3;
}

message SubData {
    int64 bigValue = 1;
}

message UpdateMyDataRequest {
    MyData update = 1;
    google.protobuf.FieldMask field_mask = 2;
}


message UpdateMyDataResponse {
    MyData new_data = 1;
}

message ListMyDataRequest {
    int32 intValue = 1;
    google.protobuf.FieldMask field_mask = 3;
}


message ListMyDataResponse {
    repeated MyData data = 1;
}